--- a/styles.css
+++ b/styles.css
@@ -28,29 +28,44 @@ body {
     border: 1px solid #ccc;
 }
 
-button {
-    padding: 10px 20px;
-    font-size: 16px;
-    border: none;
-    background-color: #007bff;
-    color: white;
-    cursor: pointer;
-    border-radius: 5px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    margin-left: 10px;  /* Add space between buttons */
-}
-
-button:hover {
-    background-color: #0056b3;
-}
-
 .palette {
     display: flex;
 }
+
 .color {
     width: 100px;
     height: 100px;
     margin: 0 5px;
     border-radius: 5px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.color span {
+    font-size: 12px;
+    text-align: center;
+}
+
+.sticky-toggle {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 20px;
+    right: 20px;
+    z-index: 1000;
+    background-color: #6c757d;
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 50%;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.sticky-toggle i {
+    font-size: 20px;
+}
+
+.sticky-toggle:hover {
+    background-color: #5a6268;
+    cursor: pointer;
 }
